[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "axonclient"
version = "0.2"
description = "Python client for Axon Server"
authors = [
    { "name" = "John Bywater", "email" = "john.bywater@appropriatesoftware.net" },
]
license = "BSD 3-Clause"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python",
]
readme = "README.md"
requires-python = ">=3.10"
homepage = "https://github.com/pyeventsourcing/axonclient"
repository = "https://github.com/pyeventsourcing/axonclient"
include = ["axonclient/py.typed"]

dependencies = [
    "grpcio[protobuf]>=1.75.1,<2.0",
    "typing_extensions",
    "googleapis-common-protos",
    "grpcio-status",
]

[tool.poetry.group.dev.dependencies]
black = { version = "*", allow-prereleases = true }
#flake8 = "*"
#flake8-broken-line = "*"
#flake8-bugbear = "*"
#flake8-coding = "*"
#flake8-isort = "*"
#flake8-tidy-imports = "*"
isort = "*"
mypy = "*"
#pre-commit = "*"
#pre-commit-hooks = "*"
#pytest = "*"
#pytest-cov = "*"
grpcio-tools = "*"
types-protobuf = "*"
mypy-protobuf = "*"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
preview = true
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pip-cache
  | \.poetry
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
branch = true
omit = []

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about missing debug-only code:
  "def __repr__",
  "if self.debug",
  # Don't complain about some magic methods:
  "def __str__",
  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if __name__ == .__main__.:",
  # Don't complain about empty realizations
  "pass",
  # Don't complain about abstract methods
  "@abc.abstractmethod"
]
ignore_errors = true
precision = 2

[tool.isort]
combine_as_imports = true
profile = "black"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip = ".eggs,.pip-cache,.poetry,venv,.venv,dist"
